--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -20,6 +20,19 @@
 <!-- These resources are around just to allow their values to be customized
      for different hardware and product builds. -->
 <resources>
+
+    <string-array translatable="false" name="networkAttributes">
+        <item>"wifi,1,1,2,-1,true"</item>
+        <item>"bluetooth,7,7,0,-1,true"</item>
+        <item>"ethernet,9,9,9,-1,true"</item>
+    </string-array>
+
+    <string-array translatable="false" name="radioAttributes">
+        <item>"1,1"</item>
+        <item>"7,1"</item>
+        <item>"9,1"</item>
+    </string-array>
+
     <bool name="config_batterySdCardAccessibility">true</bool>
 
     <bool name="config_allowAllRotations">true</bool>
