fix overlay files
Change-Id: I681fa55ef7797c0103d09f67b027e3b7e4deea28

--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -46,7 +46,7 @@
     <storage android:mountPoint="/storage/internal_sd" 
 	android:storageDescription="@string/storage_nand_flash" 
 	android:primary="false"  
-	android:removable="true" 
+	android:removable="false" 
 	android:emulated="false" 
 	android:mtpReserve="100" 
 	android:allowMassStorage="true" />
