enable multi user support
Change-Id: Ibdb012f7a43255f2c428b42a4f669749e44ae234

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -132,6 +132,9 @@
    <bool name="config_showNavigationBar">true</bool>
    <integer name="config_multiuserMaximumUsers">8</integer>
 
+    <!--  Whether Multiuser UI should be shown -->
+    <bool name="config_enableMultiUserUI">true</bool>
+
     <!-- Defines the system property to set for performance profile xe: sys.cpu.modes. Leave it
          blank if the device do not support performance profiles -->
     <string name="config_perf_profile_prop" translatable="false">sys.cpu.mode</string>
